# rust-buf-build

./: Cargo.toml  README.md  buf.gen.yaml  build.rs
proto/: helloworld.proto
src/: client.rs  server.rs
