[package]
name = "helloworld-grpcio"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
futures = "0.3.26"
futures-channel = "0.3.26"
futures-executor = "0.3.26"
futures-util = "0.3.26"
grpcio = "0.12.0"
# Need to keep back for the generated proto files
protobuf = "2.28.0"

[build-dependencies]
protoc-grpcio = "3.0.0"
